fixtures/invalid/bad-reference-target.lmk
@reference target="../secret"
Reference targets must be local lowercase slugs.
